adjusted grid to stop overextension of width on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,8 @@
   grid-template-rows: 1fr;  
   width: 100vw;
   height: 100vh;
+  column-gap: 20px; 
+  background-color: #80AFCD;
 }
 
 @media screen and (max-width: 1200px) {
