--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -3,12 +3,12 @@
   display: grid; 
   grid-template-columns: 1fr 1fr 1fr; 
   grid-gap: 20px; 
-  margin-left: 20px; 
   margin-top: 20px;
 }
 
 @media screen and (max-width: 1200px) {
   .card-list {
-    grid-template-columns: 1fr;  
+    grid-template-columns: 1fr; 
+    justify-items: center;  
   }
 }
