--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -19,6 +19,10 @@
 }
 
 @media screen and (max-width: 1200px) {
+  .navbar {
+    border-right: none; 
+    border-bottom: 1px solid black; 
+  }
   .navbar__form {
     height: auto;
     padding: 10px;   
